fix(panel-link): add vertical padding (for when label is wrapping to multiple lines)

--- a/packages/css/src/panel-link.scss
+++ b/packages/css/src/panel-link.scss
@@ -19,6 +19,8 @@ $link-padding-left-medium: $spacing-base-4;
 $link-padding-left-large: $spacing-base-6;
 $link-padding-right-medium: $spacing-base-3;
 $link-padding-right-large: $spacing-base-4;
+$link-padding-vertical-medium: $spacing-base-1;
+$link-padding-vertical-large: $spacing-base-2;
 
 .#{$classname} {
   display: flex;
@@ -32,15 +34,17 @@ $link-padding-right-large: $spacing-base-4;
   overflow-wrap: anywhere;
 
   background-color: $color-neutral-white;
-
   border: $border-width-default solid transparent;
 
   // Medium size
   min-height: $link-size-height-medium;
   min-width: Min($link-size-width, 100%);
   max-width: utils.$component-max-width;
+
   padding-left: $link-padding-left-medium;
   padding-right: $link-padding-right-medium;
+  padding-top: $link-padding-vertical-medium;
+  padding-bottom: $link-padding-vertical-medium;
 
   transition: all $duration-normal;
   transition-property: border-color, background-color, margin;
@@ -89,6 +93,8 @@ $link-padding-right-large: $spacing-base-4;
     min-height: $link-size-height-large;
     padding-left: $link-padding-left-large;
     padding-right: $link-padding-right-large;
+    padding-top: $link-padding-vertical-large;
+    padding-bottom: $link-padding-vertical-large;
 
     & > svg:nth-last-of-type(1) {
       right: $link-padding-right-large;
